03-K8sService/04-argo-workflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: nginx
    # ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: https # ingress-nginx
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
      - argoworkflow.ninox.com
    secretName: ingress-cert-tls
  rules:
  - host: argoworkflow.ninox.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-server
            port: 
              number: 2746
